# TEXEDO

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
configs/: paths.yaml
docs/: DATA.md  FORMAT.md  MODELS.md  REPRODUCE.md  UPLOAD.md
docs/tasks/: CONTRACT.md  task1_tokenizer.md  task2_generator.md  task3_dynamic.md  task4_semantic.md  task5_data.md  task6_assets.md
generator/: README.md  demo.py  train.py
generator/configs/: assets.yaml  config_fsq_multitask.yaml  default.yaml  default_ours.yaml
generator/configs/evaluator/: tm2t.yaml
generator/mgpt/: __init__.py  config.py
generator/scripts/: prepare_dataset.py
generator/templates/: template_pretrain.json
generator/texedo_generator/: __init__.py  config.py
pipeline/: README.md  generate.py  score.py  select_best_of_n.py
scripts/: download_assets.py  stage_local_assets.py  visualize_csv.py  visualize_npz.py
textseedo/: README.md  __init__.py  paths.py
tokenizer/: README.md  encode_motion_tokens.py  fsq_adapter.py  fsq_dataloader.py  fsq_train.py  precompute_fsq_stats.py
tokenizer/configs/: fsq_combined.yaml
tokenizer/normalization/: fsq_motion_stats_combined.npz
utilities/: README.md  __init__.py  motion_format.py  paths.py
verifiers/dynamic/: README.md  dataset.py  model.py  predict_rewards.py  train_verifier.py
verifiers/semantic/: README.md  inference.py  models.py  train_evaluator.py
videos/optimized/: circling.webm  dance.webm  jumping_jacks.webm  point.webm  run_left_right.webm  sarsa.webm  spinning.webm  strafe.webm  walk_backward2.webm  walk_forward.webm
website/: demo_data.js  gen_demo_data.py  index.html  optimize_videos.sh
(+84 files in other folders)
